--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/recruitmentDB
+MONGO_URI=mongodb+srv://zebimalik4567:0JRah3RfhsqTCOwI@cluster0.6jhoy.mongodb.net/recruitmentDB
 JWT_SECRET=yourSuperSecretJWT
 CLIENT_URL=http://localhost:5000
 
