--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "multer": "^2.0.0",
     "node-cron": "^4.0.7",
     "nodemailer": "^6.10.1",
+    "pdf-lib": "^1.17.1",
     "pdfkit": "^0.17.1",
     "pdfkit-table": "^0.1.99",
     "xlsx": "^0.18.5"
